--- a/miniprogram-35/app.json
+++ b/miniprogram-35/app.json
@@ -1,11 +1,9 @@
 {
   "pages":[
     "pages/shopcar/shopcar",
-    "pages/chongzhi/chongzhi",
-    "pages/bancheng/bancheng"
+    "pages/bancheng/bancheng",
    
-  
-   
+    "pages/chongzhi/chongzhi" 
   ],
   "window":{
     "backgroundTextStyle":"light",
